Clipping of map corrected.

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h3 {
     font-size: 20px;
 }
 .container-introduction {
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
 #the-best-content{
